{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 357,
  "lineage": "3ab6d6b2-b4d0-e11b-ffcb-4a3ab513bd15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL access from EKS nodes",
            "from_port": 5432,
            "id": "sgrule-203721357",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0736372bf83a3cd9a",
            "security_group_rule_id": "sgr-0bceb4e4e49d9eb8e",
            "self": false,
            "source_security_group_id": "sg-04a7195464edf4f43",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.main",
            "module.ec2.aws_security_group.rabbitmq",
            "module.ec2.aws_security_group.redis",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_vpc_policy",
            "module.eks.aws_security_group.cluster",
            "module.rds.aws_security_group.rds",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f058bc6b3ee6fcc",
            "arn": "arn:aws:ec2:us-east-1:458586357331:instance/i-07f74895791a87144",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "frameforge-ec2-profile-dev",
            "id": "i-07f74895791a87144",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3d0c4e10997042d",
            "private_dns": "ip-10-0-10-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "FrameForge"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "FrameForge"
                },
                "throughput": 125,
                "volume_id": "vol-0b0b85067d6113054",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9e601f62b2a5bcc",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-rabbitmq-dev",
              "Service": "rabbitmq"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-rabbitmq-dev",
              "Project": "FrameForge",
              "Service": "rabbitmq"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e4981c32e8775f1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2",
            "module.ec2.aws_iam_role.ec2",
            "module.ec2.aws_security_group.rabbitmq",
            "module.ec2.data.aws_ami.amazon_linux_2023",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f058bc6b3ee6fcc",
            "arn": "arn:aws:ec2:us-east-1:458586357331:instance/i-0ca86e7487d2fcd5d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "frameforge-ec2-profile-dev",
            "id": "i-0ca86e7487d2fcd5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f6edcae8557e3b0",
            "private_dns": "ip-10-0-10-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "FrameForge"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "FrameForge"
                },
                "throughput": 125,
                "volume_id": "vol-0f5ca534236c32a3c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9e601f62b2a5bcc",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-redis-dev",
              "Service": "redis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-redis-dev",
              "Project": "FrameForge",
              "Service": "redis"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e209b75d97055bcb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2",
            "module.ec2.aws_iam_role.ec2",
            "module.ec2.aws_security_group.redis",
            "module.ec2.data.aws_ami.amazon_linux_2023",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:security-group/sg-04e4981c32e8775f1",
            "description": "Security group for RabbitMQ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e4981c32e8775f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "AMQP",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Management UI",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              }
            ],
            "name": "frameforge-rabbitmq-dev",
            "name_prefix": "",
            "owner_id": "458586357331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-rabbitmq-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-rabbitmq-sg-dev",
              "Project": "FrameForge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:security-group/sg-0e209b75d97055bcb",
            "description": "Security group for Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e209b75d97055bcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "frameforge-redis-dev",
            "name_prefix": "",
            "owner_id": "458586357331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-redis-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-redis-sg-dev",
              "Project": "FrameForge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:security-group/sg-0b15a864faa4e11f1",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b15a864faa4e11f1",
            "ingress": [],
            "name": "frameforge-dev-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "458586357331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frameforge-dev-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-dev-eks-cluster-sg",
              "Project": "FrameForge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:security-group/sg-0736372bf83a3cd9a",
            "description": "Security group for FrameForge RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0736372bf83a3cd9a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from allowed security groups",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4981c32e8775f1",
                  "sg-0e209b75d97055bcb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "frameforge-rds-dev",
            "name_prefix": "",
            "owner_id": "458586357331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-rds-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-rds-sg-dev",
              "Project": "FrameForge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.rabbitmq",
            "module.ec2.aws_security_group.redis",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4b30bb5689b8d3c",
            "arn": "arn:aws:ec2:us-east-1:458586357331:elastic-ip/eipalloc-0e4b30bb5689b8d3c",
            "association_id": "eipassoc-0892c554ba0846ca8",
            "domain": "vpc",
            "id": "eipalloc-0e4b30bb5689b8d3c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-050eec0663f2000b5",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-44-209-145-25.compute-1.amazonaws.com",
            "public_ip": "44.209.145.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-nat-eip-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-nat-eip-dev",
              "Project": "FrameForge"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:internet-gateway/igw-0368edfc6a5822e45",
            "id": "igw-0368edfc6a5822e45",
            "owner_id": "458586357331",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-igw-dev",
              "Project": "FrameForge"
            },
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4b30bb5689b8d3c",
            "association_id": "eipassoc-0892c554ba0846ca8",
            "connectivity_type": "public",
            "id": "nat-0f303ee5f99958db2",
            "network_interface_id": "eni-050eec0663f2000b5",
            "private_ip": "10.0.1.236",
            "public_ip": "44.209.145.25",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d509e42ba96dd4a",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-nat-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-nat-dev",
              "Project": "FrameForge"
            },
            "timeouts": {
              "create": "20m",
              "delete": "20m"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:route-table/rtb-02ecb87b392e8145b",
            "id": "rtb-02ecb87b392e8145b",
            "owner_id": "458586357331",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f303ee5f99958db2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-private-rt-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-private-rt-dev",
              "Project": "FrameForge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:route-table/rtb-070a37b39de7257b5",
            "id": "rtb-070a37b39de7257b5",
            "owner_id": "458586357331",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0368edfc6a5822e45",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-public-rt-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-public-rt-dev",
              "Project": "FrameForge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ecea1f09a4ea927",
            "route_table_id": "rtb-02ecb87b392e8145b",
            "subnet_id": "subnet-0b9e601f62b2a5bcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0550bd1b7f8bb796b",
            "route_table_id": "rtb-02ecb87b392e8145b",
            "subnet_id": "subnet-0500c9f49a3e49e9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0652d88c83fdf3d06",
            "route_table_id": "rtb-070a37b39de7257b5",
            "subnet_id": "subnet-00d509e42ba96dd4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037cba91951b44207",
            "route_table_id": "rtb-070a37b39de7257b5",
            "subnet_id": "subnet-0ecbcbbfe0b6c4c74"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:subnet/subnet-0b9e601f62b2a5bcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9e601f62b2a5bcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458586357331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-private-us-east-1a-dev",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-private-us-east-1a-dev",
              "Project": "FrameForge",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:subnet/subnet-0500c9f49a3e49e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0500c9f49a3e49e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458586357331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-private-us-east-1b-dev",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-private-us-east-1b-dev",
              "Project": "FrameForge",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:subnet/subnet-00d509e42ba96dd4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d509e42ba96dd4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458586357331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-public-us-east-1a-dev",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-public-us-east-1a-dev",
              "Project": "FrameForge",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:subnet/subnet-0ecbcbbfe0b6c4c74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecbcbbfe0b6c4c74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458586357331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "frameforge-public-us-east-1b-dev",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frameforge-public-us-east-1b-dev",
              "Project": "FrameForge",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a58614e7a2cdfbb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458586357331:vpc/vpc-0a58614e7a2cdfbb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffabf74bef95997d",
            "default_route_table_id": "rtb-0ae3034b65c9f71e4",
            "default_security_group_id": "sg-05b29fdd773f79284",
            "dhcp_options_id": "dopt-064230b09a4c1db55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a58614e7a2cdfbb6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae3034b65c9f71e4",
            "owner_id": "458586357331",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "frameforge-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "frameforge-vpc-dev",
              "Project": "FrameForge"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}